--- a/android/build.gradle
+++ b/android/build.gradle
@@ -32,6 +32,10 @@ allprojects {
             // Android JSC is installed from npm
             url("$rootDir/../node_modules/jsc-android/dist")
         }
+         maven {
+           // react-native-background-fetch
+           url("${project(':react-native-background-fetch').projectDir}/libs")
+       }
         maven { url 'https://jitpack.io' }
     }
 }
