--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "react-native-progress": "^4.0.3",
     "react-native-push-notification": "^8.1.1",
     "react-native-reanimated": "^1.7.0",
+    "react-native-restart": "^0.0.22",
     "react-native-safari-view": "^2.1.0",
     "react-native-safe-area-context": "^0.7.3",
     "react-native-screens": "^2.0.0-beta.6",
